erDiagram
    USUARIO ||--o{ HISTORICO_ALTERACAO : "realiza"

    HISTORICO_ALTERACAO }|..|| PECA : "registra alterações em"
    HISTORICO_ALTERACAO }|..|| COLECAO : "registra alterações em"
    HISTORICO_ALTERACAO }|..|| ESTAMPA : "registra alterações em"
    HISTORICO_ALTERACAO }|..|| ADESIVO : "registra alterações em"
    HISTORICO_ALTERACAO }|..|| CHAVEIRO : "registra alterações em"

    COLECAO ||--o{ ESTAMPA : "contém"
    COLECAO ||--o{ CHAVEIRO : "contém"

    USUARIO {
        int usuarioId PK
        string nome UK
        string senha
        enum tipo "ADMINISTRADOR, FUNCIONARIO"
    }

    COLECAO {
        int colecaoId PK
        string nome
        date dataInicio
        date dataFim
    }

    ESTAMPA {
        int estampaId PK
        string nome
        int quantidade
        int colecaoId FK
    }

    PECA {
        int pecaId PK
        string tipo
        string tamanho
        string cor
        int quantidade
    }

    ADESIVO {
        int adesivoId PK
        string adesivoModelo
        boolean cromatico
    }

    CHAVEIRO {
        int chaveiroId PK
        string chaveiroModelo
        int colecaoId FK
    }

    HISTORICO_ALTERACAO {
        long id PK
        string entidade "PECA, COLECAO, ESTAMPA, ADESIVO, CHAVEIRO"
        int entidadeId
        string campoAlterado
        string valorAntigo
        string valorNovo
        datetime dataHora
        int usuarioId FK
    }